<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_feeds_item"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/new_feed" />
        <item
            android:id="@+id/edit_profile_item"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/notification_item"
            android:icon="@drawable/ic_menu_notify"
            android:title="@string/notification_item" />
        <item
            android:id="@+id/upgrade_item"
            android:icon="@drawable/ic_menu_upgrade"
            android:title="@string/upgrade_to_doctor" />


    </group>
    <group android:id="@+id/second_section" android:checkableBehavior="all">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>





</menu>
