<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/red"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/add_post"
            android:textSize="@dimen/text_size"
            />
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        >
    <android.support.v7.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/poster_image_view"
            />
    </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:id="@+id/poster_name"
            />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_name_hint"
            android:paddingLeft="20dp"
            android:id="@+id/drug_name_add_post"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_type_hint"
            android:paddingLeft="20dp"
            android:id="@+id/drug_type_add_post"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drug_concentration_hint"
            android:inputType="numberDecimal"
            android:paddingLeft="20dp"
            android:id="@+id/drug_con_add_post"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginRight="5dp"
            android:text="@string/post_hint"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:id="@+id/post_add_post"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/white_buuton"
            android:text="@string/cancel_hint"
            android:layout_marginLeft="5dp"
            android:textAllCaps="false"
            android:id="@+id/cancel_add_post"
            />
    </LinearLayout>
</LinearLayout>