<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/verf_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_marginLeft="27dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_to_doctor"
            android:layout_gravity="center"
            android:layout_marginLeft="27dp"
            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <EditText
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_gravity="center"
    android:id="@+id/pharmacy_phone_edit_text"
    android:singleLine="true"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:textSize="@dimen/text_size"
    android:background="@drawable/verfication_text"
    android:hint="@string/pharmacy_phone_hint"
    android:textAlignment="center"
    android:inputType="phone"
    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
    android:textAppearance="@style/TextAppearance.AppCompat"
    />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:id="@+id/pharmacy_lisence_edit_text"
        android:singleLine="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="@dimen/text_size"
        android:background="@drawable/verfication_text"
        android:hint="@string/pharmacy_lisence_hint"
        android:textAlignment="center"
        android:inputType="phone"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:text="@string/upgrade"
            android:elevation="5dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:id="@+id/upgride"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/white_buuton"
            android:layout_marginTop="15dp"
            android:text="@string/cancel_hint"
            android:textColor="@color/red"
            android:textAllCaps="false"
            android:id="@+id/cancel_upgrade"
            android:textSize="@dimen/text_size"
            />


    </LinearLayout>


</LinearLayout>
