<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="5dp"
        android:elevation="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/edit_profile"
            android:textSize="@dimen/text_size"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        app:cardCornerRadius="40dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/user_image_view_profile"
            android:src="@drawable/logo"
            />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">



        <EditText
            android:id="@+id/name_edit_profile"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name_hint"
            android:drawableLeft="@drawable/ic_action_person"
            android:inputType="textAutoComplete"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/phone_number_profile"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_call_drk"
            android:hint="@string/mobile_number_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/MyEditTextTheme"
        app:hintTextAppearance="@style/FloatingLabel">

        <EditText
            android:id="@+id/password_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_action_secure"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size" />

    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    >
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:text="@string/save_hint"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        />
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:background="@drawable/white_buuton"
        android:textColor="@color/white"
        android:text="@string/cancel_hint"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</LinearLayout>
</LinearLayout>