<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/regidter_hint"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/text_big_size"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/user_image_view_register"
                    />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">



                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/name_hint"
                    android:drawableLeft="@drawable/ic_action_person"
                    android:inputType="textAutoComplete"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/phone_number_register"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_action_call_drk"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/password_register_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="2"
                    android:drawableLeft="@drawable/ic_action_secure"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/confirm_password_register_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="2"
                    android:drawableLeft="@drawable/ic_action_secure"
                    android:hint="@string/repeat_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/text_size" />

            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/sign_up_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape"
                android:elevation="5dp"
                android:padding="15dp"
                android:text="@string/singup_hint"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account" />

                <TextView
                    android:id="@+id/login_text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_hint"
                    android:textColor="@color/red" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
