<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"

            >
            <android.support.v7.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="30dp"
                android:elevation="5dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/poster_doctor_image_view"
                    />
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/poster_doctor_name"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/look_for"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drug_name_hint"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/drug_name_doctor_post"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drug_type_hint"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/drug_type_doctor_post"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drug_concentration_hint"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/drug_con_doctor_post"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"

            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_of_doctors_doctor"
                    android:textSize="16dp"
                    android:text="10"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_hint"
                    android:textStyle="bold"
                    android:layout_marginLeft="3dp"
                    />

            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exposure_plus_1_black_24dp"
                android:id="@+id/have_drug"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:text="@string/mark_bad_hint"
                android:id="@+id/mark_bad"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>